--- a/myCSS.css
+++ b/myCSS.css
@@ -1,15 +1,46 @@
-.absolutePosition {
+.outterContainer {
     position: absolute;
     top: 17%;
+    right: 4%;
+    max-width: 50%;
+    width: 100%;
+    background-color: rgba(5, 255, 59, 0.089);
+    padding: 1px;
+}
+
+.absolutePosition {
+    position: relative;
+    /* top: 17%; */
     /* left: 0;
     right: 0;
     margin-left: 800px;
     margin-right: auto; */
-    right: 4%;
-    max-width: 50%;
+    /* right: 4%; */
+    /* max-width: 50%; */
     width: 100%;
     color: #FFF;
     background: rgba(0, 0, 0, 0.2);
     border-radius: 10px;
     padding: 30px;
+}
+
+.absolutePositionLinks {
+    position: relative;
+    /* top: 47%; */
+    /* right: 4%; */
+    max-width: 100%;
+    width: 100%;
+    color: #FFF;
+    background: rgba(255, 3, 3, 0.089);
+    /* border-radius: 10px; */
+    padding: 15px;
+    margin-top: 30px;
+}
+
+.cellule {
+    padding: 10px;
+    border-radius: 10px;
+    margin-left: 35px;
+    margin-right: 30px;
+    text-align: center;
 }
