--- a/myCSS.css
+++ b/myCSS.css
@@ -4,7 +4,7 @@
     right: 4%;
     max-width: 50%;
     width: 100%;
-    background-color: rgba(5, 255, 59, 0.089);
+    /* background-color: rgba(5, 255, 59, 0.089); */
     padding: 1px;
 }
 
@@ -22,6 +22,12 @@
     background: rgba(0, 0, 0, 0.2);
     border-radius: 10px;
     padding: 30px;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .absolutePositionLinks {
@@ -31,16 +37,34 @@
     max-width: 100%;
     width: 100%;
     color: #FFF;
-    background: rgba(255, 3, 3, 0.089);
+    /* background: rgba(255, 3, 3, 0.089); */
     /* border-radius: 10px; */
     padding: 15px;
     margin-top: 30px;
 }
 
 .cellule {
-    padding: 10px;
-    border-radius: 10px;
-    margin-left: 35px;
-    margin-right: 30px;
+    background-color: gray;
+    margin: 10px;
     text-align: center;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+.cellule:hover {
+    background-color: rgba(0, 0, 0, 0.2);
+    border: 1px solid black;
+    cursor: pointer;
+    -webkit-touch-callout: none;
+    /* iOS Safari */
+    -webkit-user-select: none;
+    /* Safari */
+    -khtml-user-select: none;
+    /* Konqueror HTML */
+    -moz-user-select: none;
+    /* Firefox */
+    -ms-user-select: none;
+    /* Internet Explorer/Edge */
+    user-select: none;
+    /* Non-prefixed version, currently supported by Chrome and Opera */
 }
