--- a/myCSS.css
+++ b/myCSS.css
@@ -22,6 +22,7 @@
     background: rgba(0, 0, 0, 0.2);
     border-radius: 10px;
     padding: 30px;
+    text-align: justify;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
@@ -44,7 +45,8 @@
 }
 
 .cellule {
-    background-color: gray;
+    color: #FFF;
+    background: rgba(0, 0, 0, 0.2);
     margin: 10px;
     text-align: center;
     border-radius: 10px;
@@ -52,8 +54,8 @@
 }
 
 .cellule:hover {
-    background-color: rgba(0, 0, 0, 0.2);
-    border: 1px solid black;
+    background-color: rgba(0, 0, 0, 0.6);
+    /* border: 1px solid black; */
     cursor: pointer;
     -webkit-touch-callout: none;
     /* iOS Safari */
