added featured projects

--- a/myCSS.css
+++ b/myCSS.css
@@ -70,3 +70,15 @@
     user-select: none;
     /* Non-prefixed version, currently supported by Chrome and Opera */
 }
+
+a {
+    color: red;
+}
+
+.projects {
+    color: black;
+}
+
+.projects:hover {
+    color: black;
+}
