--- a/myCSS.css
+++ b/myCSS.css
@@ -1,11 +1,20 @@
-.outterContainer {
+.floatingTable {
     position: absolute;
     top: 17%;
-    right: 4%;
-    max-width: 50%;
+    left: 1%;
+    max-width: 97%;
     width: 100%;
+}
+
+.outterContainer {
+    /* position: absolute; */
+    /* top: 17%; */
+    /* right: 4%; */
+    /* max-width: 50%; */
+    /* width: 100%; */
     /* background-color: rgba(5, 255, 59, 0.089); */
     padding: 1px;
+    /* background: rgba(102, 51, 153, 0.075); */
 }
 
 .absolutePosition {
@@ -69,16 +78,4 @@
     /* Internet Explorer/Edge */
     user-select: none;
     /* Non-prefixed version, currently supported by Chrome and Opera */
-}
-
-a {
-    color: red;
-}
-
-.projects {
-    color: black;
-}
-
-.projects:hover {
-    color: black;
 }
